--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.jpa.hibernate.ddl-auto=update
+
+#security.oauth2.client.client-id=f3b607e263d1c0f1253d
+#security.oauth2.client.client-secret=f1e9551236b1a4567fe35ef837f13431a232aa9e
+#security.oauth2.client.access-token-uri=https://github.com/login/oauth/access_token
+#security.oauth2.client.user-authorization-uri=https://github.com/login/oauth/authorize
+#security.oauth2.resource.user-info-uri=https://api.github.com/user
