--- a/pom.xml
+++ b/pom.xml
@@ -41,16 +41,16 @@
 		</dependency>
 		
 		<dependency>
-    	<groupId>io.springfox</groupId>
-    	<artifactId>springfox-swagger2</artifactId>
-   		 <version>2.9.2</version>
-	</dependency>
+    		<groupId>io.springfox</groupId>
+    		<artifactId>springfox-swagger2</artifactId>
+   			 <version>2.9.2</version>
+		</dependency>
 	
-	<dependency>
-    	<groupId>io.springfox</groupId>
-    	<artifactId>springfox-swagger-ui</artifactId>
-    	<version>2.9.2</version>
-	</dependency>
+		<dependency>
+	    	<groupId>io.springfox</groupId>
+	    	<artifactId>springfox-swagger-ui</artifactId>
+	    	<version>2.9.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -90,6 +90,41 @@
             <artifactId>spring-security-oauth2-autoconfigure</artifactId>
             <version>2.1.4.RELEASE</version>
         </dependency>
+        <dependency>
+    		<groupId>org.springframework.security</groupId>
+    		<artifactId>spring-security-web</artifactId>
+		</dependency>
+
+		<dependency>
+    		<groupId>org.springframework.security</groupId>
+    		<artifactId>spring-security-config</artifactId>
+		</dependency>
+		
+		<dependency>
+    		<groupId>org.webjars.bowergithub.polymerelements</groupId>
+    		<artifactId>iron-form</artifactId>
+    		<version>2.4.0</version>
+		</dependency>
+		
+		<dependency>
+      		<groupId>com.github.librepdf</groupId>
+      		<artifactId>openpdf</artifactId>
+      		<version>1.3.8</version>
+   		 </dependency>
+    	<dependency>
+      		<groupId>commons-io</groupId>
+      		<artifactId>commons-io</artifactId>
+      		<version>2.6</version>
+    	</dependency>
+    	<dependency>
+      		<groupId>org.springframework.boot</groupId>
+      		<artifactId>spring-boot-starter-mail</artifactId>
+    	</dependency>
+    	<dependency>
+      		<groupId>javax.mail</groupId>
+      		<artifactId>javax.mail-api</artifactId>
+      		<version>1.5.2</version>
+    	</dependency>
         
 	</dependencies>
 	
