--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,7 @@ spring:
   security:
     oauth2:
       client:
-        registration:
-          facebook:
-            clientId: {client id}
-            clientSecret: {client-secret}          
+        registration:        
           github:
-            clientId: {client id}
-            clientSecret: {client-secret}
+            clientId: f3b607e263d1c0f1253d
+            clientSecret: f1e9551236b1a4567fe35ef837f13431a232aa9e
